-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 10, 11
-
Component/s: hotspot
-
b09
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8242989 | 11.0.8 | Yasumasa Suenaga | P4 | Resolved | Fixed | b01 |
| JDK-8242750 | 11.0.7 | Yasumasa Suenaga | P4 | Resolved | Fixed | b10 |
http://mail.openjdk.java.net/pipermail/hotspot-runtime-dev/2018-May/027698.html
Event descriptions in hs_err and VM.info dcmd are trucated as following:
```
Event: 1.977 Thread 0x00007f1720010800 Exception <a 'java/lang/IncompatibleClassChangeError'{0x00000000d7a338f0}: Found class java.lang.Object, but interface was expected> (0x00000000d7a338f0) thrown at [/scratch/opt/mach5/mesos/work_dir/slaves/9190d864-6621-4810-ba08-d8d8c75ba674-S702/framewo
```
I think we can fix it as this webrev.
http://cr.openjdk.java.net/~ysuenaga/event-msg-truncated/
This webrev shows event description as following:
```
Event: 3.660 Thread 0x00007fa174018800 Exception <a 'java/lang/NoSuchMethodError'{0x00000000d778f878}: java.lang.invoke.DirectMethodHandle$Holder.invokeInterface(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)V> (0x00000000d778f878) thrown at [/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/interpreter/linkResolver.cpp, line 755]
```
But I concern this change might not work when HotSpot is built with VS 2013 or earlier.
This change uses vsnprintf() to get length of string, but _vscprintf() will be used when older Visual Studio is used to build.
Event descriptions in hs_err and VM.info dcmd are trucated as following:
```
Event: 1.977 Thread 0x00007f1720010800 Exception <a 'java/lang/IncompatibleClassChangeError'{0x00000000d7a338f0}: Found class java.lang.Object, but interface was expected> (0x00000000d7a338f0) thrown at [/scratch/opt/mach5/mesos/work_dir/slaves/9190d864-6621-4810-ba08-d8d8c75ba674-S702/framewo
```
I think we can fix it as this webrev.
http://cr.openjdk.java.net/~ysuenaga/event-msg-truncated/
This webrev shows event description as following:
```
Event: 3.660 Thread 0x00007fa174018800 Exception <a 'java/lang/NoSuchMethodError'{0x00000000d778f878}: java.lang.invoke.DirectMethodHandle$Holder.invokeInterface(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)V> (0x00000000d778f878) thrown at [/home/ysuenaga/OpenJDK/jdk/src/hotspot/share/interpreter/linkResolver.cpp, line 755]
```
But I concern this change might not work when HotSpot is built with VS 2013 or earlier.
This change uses vsnprintf() to get length of string, but _vscprintf() will be used when older Visual Studio is used to build.
- backported by
-
JDK-8242750 Event descriptions are truncated in logs
-
- Resolved
-
-
JDK-8242989 Event descriptions are truncated in logs
-
- Resolved
-
- relates to
-
JDK-8220762 Rework EventLog message string handling
-
- Closed
-
-
JDK-8217728 Speed up incremental rerun of "make hotspot"
-
- Resolved
-
-
JDK-8221851 Use of THIS_FILE in hotspot invalidates precompiled header on Linux/GCC
-
- Resolved
-