8204551: Event descriptions are truncated in logs

Reviewed-by: coleenp, coleenp